Phase 2 extension
driver confirmation feature